core/infrastructure/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: core-staging-ingress-ip
    networking.gke.io/managed-certificates: core-staging-ingress-managed-cert
spec:
  rules:
  - host: api.staging.knowlearning.systems
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: core-deno
            port:
              number: 8080
